[gd_scene load_steps=8 format=3 uid="uid://dajq8p8l557ws"]

[ext_resource type="Script" uid="uid://jqa7npddbl44" path="res://checksfinder/autoloads/checksfinder.gd" id="1_30ftd"]
[ext_resource type="AudioStream" uid="uid://cwu2g1c1kwcin" path="res://checksfinder/audio/checksfinder intro.wav" id="2_0jtvp"]
[ext_resource type="Script" uid="uid://dpta1ac8jdy0m" path="res://checksfinder/autoloads/music_controller.gd" id="2_cxgin"]
[ext_resource type="AudioStream" uid="uid://cdbqofweg6k3k" path="res://checksfinder/audio/checksfinder loop.wav" id="3_cxgin"]

[sub_resource type="Animation" id="Animation_cyvo4"]
resource_name = "sound_fadeout"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loop:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -30.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("intro:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -30.0, -80.0]
}

[sub_resource type="Animation" id="Animation_nomo8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loop:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("intro:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_db0jq"]
_data = {
&"RESET": SubResource("Animation_nomo8"),
&"sound_fadeout": SubResource("Animation_cyvo4")
}

[node name="ChecksFinder" type="Node"]
script = ExtResource("1_30ftd")

[node name="MusicController" type="Node" parent="."]
script = ExtResource("2_cxgin")

[node name="loop" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource("3_cxgin")
volume_db = 1.0
bus = &"Music"

[node name="intro" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource("2_0jtvp")
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MusicController"]
libraries = {
&"": SubResource("AnimationLibrary_db0jq")
}

[connection signal="finished" from="MusicController/intro" to="MusicController" method="_on_intro_finished"]
[connection signal="animation_finished" from="MusicController/AnimationPlayer" to="MusicController" method="_on_animation_player_animation_finished"]
